--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+<com.lost.sslayout.SimpleSwitchLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/simpleswitchlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.lostls.simpleswitchlayout.com.lostls.MainActivity">
+    >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_page_3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:background="#a69abd"
+        android:text="page3"/>
+
+    <TextView
+        android:id="@+id/tv_page_2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:background="#f0b694"
+        android:text="page2"/>
+
+    <TextView
+        android:id="@+id/tv_page_1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:background="#a8cbcd"
+        android:text="page1"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:layout_gravity="bottom"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_page1"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="page1"
+                android:textAllCaps="false"
+                android:layout_margin="10dp"
+                android:onClick="switchPage"/>
+            <Button
+                android:id="@+id/btn_page2"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="page2"
+                android:textAllCaps="false"
+                android:layout_margin="10dp"
+                android:onClick="switchPage"/>
+            <Button
+                android:id="@+id/btn_page3"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="page3"
+                android:textAllCaps="false"
+                android:layout_margin="10dp"
+                android:onClick="switchPage"/>
+        </LinearLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="LoadingLayout"
+        android:textAllCaps="false"
+        android:layout_margin="10dp"
+        android:onClick="gotoLoadingLayout"/>
+    </LinearLayout>
+
+</com.lost.sslayout.SimpleSwitchLayout>
